# PlatformGame

./: CMakeLists.txt
include/glad/: glad.h
shaders/: fragment_shader.txt  text_fragment.txt  text_vertex.txt  vertex_shader.txt
src/: Cannon.cpp  Cannon.h  Collision.cpp  Collision.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Wall.cpp  Wall.h  main.cpp  orb.cpp  orb.h
